--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,4 +10,7 @@
     <string name="date">Date</string>
     <string name="allplay">All Play</string>
     <string name="shufle">Shuffle</string>
+    <string name="failed">Failed</string>
+    <string name="search">Search</string>
+    <string name="hintsearch">Enter...</string>
 </resources>
